# trino-wasm-python

./: .gitignore  CMakeLists.txt  Dockerfile  build-image.sh  build-wasm.sh  build.sh  pom.xml  pyhost.c  pyhost.h  trino.py
.github/workflows/: ci.yml  release.yml
